// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textDecorationThickness renders 0 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-thickness: 0;
  text-decoration-thickness: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: 0;
  text-decoration-thickness: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: 0;
  text-decoration-thickness: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: 0;
  text-decoration-thickness: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationThickness renders function 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-thickness: hasnot;
  text-decoration-thickness: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: has;
  text-decoration-thickness: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: hasnot;
  text-decoration-thickness: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: has;
  text-decoration-thickness: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationThickness renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-thickness: invalid.path.1;
  text-decoration-thickness: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: invalid.path.1;
  text-decoration-thickness: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: invalid.path.1;
  text-decoration-thickness: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: invalid.path.1;
  text-decoration-thickness: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationThickness renders negative number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-thickness: -54881px;
  text-decoration-thickness: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: -54881px;
  text-decoration-thickness: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: -42365px;
  text-decoration-thickness: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: -42365px;
  text-decoration-thickness: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationThickness renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-thickness: July;
  text-decoration-thickness: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: September;
    text-decoration-thickness: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: July;
  text-decoration-thickness: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: September;
    text-decoration-thickness: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: January;
  text-decoration-thickness: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: December;
    text-decoration-thickness: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: April;
    text-decoration-thickness: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: May;
    text-decoration-thickness: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-thickness: June;
    text-decoration-thickness: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: January;
  text-decoration-thickness: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: December;
    text-decoration-thickness: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: April;
    text-decoration-thickness: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: May;
    text-decoration-thickness: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-thickness: June;
    text-decoration-thickness: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationThickness renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: July;
    text-decoration-thickness: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: September;
    text-decoration-thickness: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: July;
    text-decoration-thickness: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: September;
    text-decoration-thickness: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: May;
    text-decoration-thickness: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: June;
    text-decoration-thickness: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: April;
    text-decoration-thickness: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: May;
    text-decoration-thickness: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: June;
    text-decoration-thickness: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-thickness: April;
    text-decoration-thickness: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationThickness renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-thickness: July;
  text-decoration-thickness: July;
}

@media May {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: September;
    text-decoration-thickness: September;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: July;
  text-decoration-thickness: July;
}

@media May {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: September;
    text-decoration-thickness: September;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: April;
  text-decoration-thickness: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: January;
    text-decoration-thickness: January;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-thickness: December;
    text-decoration-thickness: December;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: April;
    text-decoration-thickness: April;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-thickness: May;
    text-decoration-thickness: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: April;
  text-decoration-thickness: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: January;
    text-decoration-thickness: January;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-thickness: December;
    text-decoration-thickness: December;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: April;
    text-decoration-thickness: April;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-thickness: May;
    text-decoration-thickness: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationThickness renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-text-decoration-thickness: July;
    text-decoration-thickness: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-thickness: September;
    text-decoration-thickness: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-text-decoration-thickness: July;
    text-decoration-thickness: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-thickness: September;
    text-decoration-thickness: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: November;
    text-decoration-thickness: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-thickness: August;
    text-decoration-thickness: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-thickness: January;
    text-decoration-thickness: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: December;
    text-decoration-thickness: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-thickness: April;
    text-decoration-thickness: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: May;
    text-decoration-thickness: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-thickness: June;
    text-decoration-thickness: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-thickness: January;
    text-decoration-thickness: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: December;
    text-decoration-thickness: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-thickness: April;
    text-decoration-thickness: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-thickness: May;
    text-decoration-thickness: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-thickness: June;
    text-decoration-thickness: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationThickness renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-thickness: 54881px;
  text-decoration-thickness: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: 54881px;
  text-decoration-thickness: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: 42365px;
  text-decoration-thickness: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: 42365px;
  text-decoration-thickness: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationThickness renders string 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-thickness: July;
  text-decoration-thickness: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: July;
  text-decoration-thickness: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: June;
  text-decoration-thickness: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: June;
  text-decoration-thickness: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationThickness renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textDecorationThickness renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-thickness: DarkSlateBlue;
  text-decoration-thickness: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: DarkSlateBlue;
  text-decoration-thickness: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: DarkSlateBlue;
  text-decoration-thickness: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-thickness: DarkSlateBlue;
  text-decoration-thickness: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
